# itksnap-mcp

./: LICENSE  README.md  pyproject.toml
demo/: agent_send.py  manifest.example.yaml  run_p2.py  smoke_totalseg.py
docs/: DESIGN.md
src/itksnap_mcp/: __init__.py  channel.py  confidence.py  config.py  dls_client.py  server.py  workspace.py
tests/: test_confidence.py
